# gst-plugins-bad

./: configure.ac
gst-libs/gst/video/: gstbasevideodecoder.c
gst/colorspace/: colorspace.c
gst/streamanalysis/: Makefile.am  gststreamanalysis.c  gststreamanalysis.h
gst/sync/: Makefile.am  gstaudiosync.c  gstaudiosync.h  gstsync.c  gstvideosync.c  gstvideosync.h
sys/: Makefile.am
